@@ -1,3 +1,5 @@
+- Added Sash classes and sample, but they don't yet work perfectly, at 
+    least under Linux (Alex Fenton)
 - Added GenericDirCtrl class (Alex Fenton)
 - Added Wizard support (Wizard, WizardEvent, WizardPage, WizardPageSimple)
     and a sample (Alex Fenton)
